# measure-to-measure-transformers

./: .ckc.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ERRATA.md  ForMathlib.lean  MeasureToMeasure.lean  README.md  RESEARCH.md  Regression.lean  WORKFLOW.md  claimgraph.json  claims.toml  lake-manifest.json  lakefile.toml
ForMathlib/: AtomlessSplitting.lean  BallProjection.lean  DiscreteTV.lean  Pigeonhole.lean  README.md  SeparatingHyperplane.lean  TangentialProjector.lean  UnitSphereGeodesic.lean
Refutations/: F11_lemma_3_4_part1_mu_eq_nu.lean  F11_lemma_5_1_shared_atom.lean  F12_cluster_to_point_off_sphere.lean  F12_lemma_3_2_volume.lean  F12_lemma_3_3_volume.lean  F12_lemma_3_4_part1_heavy_tails.lean  F12_lemma_3_4_part2_heavy_tails.lean  F18_lemma_3_2_dim_one.lean  (+1 more)
experiments/: README.md  common.py  pyproject.toml
experiments/E1_mass_transport/: run.py
experiments/E2_clustering/: run.py
experiments/E3_disentangle/: run.py
experiments/E4_matching/: run.py
experiments/E5_lyapunov/: run.py
experiments/E6_end_to_end/: run.py
experiments/E7_linear_impossible/: run.py
experiments/results/E1_mass_transport/: manifest.json  summary.json
experiments/results/E2_clustering/: manifest.json  summary.json
experiments/results/E3_disentangle/: manifest.json  summary.json
experiments/results/E4_matching/: manifest.json  summary.json
experiments/results/E5_lyapunov/: manifest.json  summary.json
experiments/results/E6_end_to_end/: manifest.json  summary.json
experiments/results/E7_linear_impossible/: manifest.json  summary.json
(+203 files in other folders)
