[project]
name = "m2m-experiments"
version = "0.1.0"
description = "Numerical validation campaign E1-E7 for measure-to-measure interpolation using Transformers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "jax>=0.4.34",
]

[tool.uv]
package = false
